Fix an issue with the URL normalization